syntax = "proto3";

package user;

service UserService {
  rpc Create (User) returns (CreateOrUpdateResponse);
  rpc FindAll (GetUserRequest) returns (GetUserResponse);
  rpc FindOne (GetUserByIdRequest) returns (GetUserByIdResponse);
  rpc Update (UpdateUserRequest) returns (CreateOrUpdateResponse);
  rpc Remove (RemoveUserByIdRequest) returns (RemoveUserByIdResponse);
}

message CreateOrUpdateResponse {
  User user = 1;
}

message GetUserRequest {}
message GetUserResponse {
  repeated User users = 1;
}

message GetUserByIdRequest {
  int32 id = 1;
}
message GetUserByIdResponse {
  User user = 1;
}

message UpdateUserRequest {
  int32 id = 1;
  UpdateUserPayload payload = 2;
}

message UpdateUserPayload {
  optional string password = 1;
  optional string name = 2;
}

message RemoveUserByIdRequest {
  int32 id = 1;
}
message RemoveUserByIdResponse {
  User user = 1;
}

message User {
  int32 id = 1;
  string username = 2;
  string password = 3;
  string name = 4;
  int32 age = 5;
}
